Parts a to c done

--- a/hw4_2023.ipynb
+++ b/hw4_2023.ipynb
@@ -364,7 +364,7 @@
     "print('y',y)\n",
     "print(\"y''\",y_second_deriv)\n",
     "print(\"M*y\",y_second_deriv_approx)\n",
-    "#print('error',error)\n"
+    "print('error',error)"
    ]
   },
   {
@@ -386,22 +386,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 84,
    "id": "f693cfc3-9639-419a-b8f8-5179c3e60123",
    "metadata": {},
    "outputs": [],
    "source": [
     "def F(y):\n",
+    "    \"\"\" Creates n x 1 matrix F such that F = M*y + E(y) \"\"\"\n",
     "    n = y.size\n",
     "    M = SecondDerMatrix(n)\n",
     "    E = np.exp(y)\n",
     "    F = M @ y + E\n",
     "    return F\n",
-    "    # raise NotImplementedError()\n",
     "    \n",
     "def JacobianF(y):\n",
-    "    # TODO: Finish\n",
-    "    raise NotImplementedError()"
+    "    \"\"\" Creates n x n Jacobian matrix of our system \n",
+    "    which is just M with main diagonal multiplyed by corresponding e^y \"\"\"\n",
+    "\n",
+    "    # Compute constant h\n",
+    "    h = 1 / (n + 1)\n",
+    "\n",
+    "    # Define the diagonal elements ignoring the h^2 constant:\n",
+    "    # -2 + e^y_i to the main diagonal and 1 for the diagonals around it\n",
+    "    main_diagonal = -2*np.ones(n) + np.exp(y)\n",
+    "    top_diagonal = np.ones(n-1) \n",
+    "    under_diagonal = np.ones(n-1) \n",
+    "    \n",
+    "    # Create the sparse matrix with the diagonals defined\n",
+    "    diagonals = [main_diagonal, top_diagonal, under_diagonal]\n",
+    "    J = diags(diagonals, [0, 1, -1]) \n",
+    "\n",
+    "    # Divide all elements by constant h^2\n",
+    "    J /= h**2\n",
+    "    \n",
+    "    return J"
    ]
   },
   {
@@ -427,14 +445,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "bb9cb01a-1fca-400f-b860-c4efaceada23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 1. 2. 3. 4. 5. 6. 7. 8. 9.]\n",
+      "[ 0.  0.  2.  6. 12. 20. 30. 42. 56. 72.]\n",
+      "[1.00000000e+00 2.43000000e+02 2.49389056e+02 6.45428793e+02\n",
+      " 1.62996791e+05 4.85165437e+08 1.06864746e+13 1.73927494e+18\n",
+      " 2.09165950e+24 1.85867175e+31]\n",
+      "  (0, 0)\t-121.0\n",
+      "  (1, 1)\t-121.0\n",
+      "  (2, 2)\t652.0757879706086\n",
+      "  (3, 3)\t48572.88401262095\n",
+      "  (4, 4)\t19693087.761699475\n",
+      "  (5, 5)\t58704988402.584625\n",
+      "  (6, 6)\t1293063424364218.0\n",
+      "  (7, 7)\t2.104522679239806e+20\n",
+      "  (8, 8)\t2.5309079901757253e+26\n",
+      "  (9, 9)\t2.2489928117937946e+33\n",
+      "  (0, 1)\t121.0\n",
+      "  (1, 2)\t121.0\n",
+      "  (2, 3)\t121.0\n",
+      "  (3, 4)\t121.0\n",
+      "  (4, 5)\t121.0\n",
+      "  (5, 6)\t121.0\n",
+      "  (6, 7)\t121.0\n",
+      "  (7, 8)\t121.0\n",
+      "  (8, 9)\t121.0\n",
+      "  (1, 0)\t121.0\n",
+      "  (2, 1)\t121.0\n",
+      "  (3, 2)\t121.0\n",
+      "  (4, 3)\t121.0\n",
+      "  (5, 4)\t121.0\n",
+      "  (6, 5)\t121.0\n",
+      "  (7, 6)\t121.0\n",
+      "  (8, 7)\t121.0\n",
+      "  (9, 8)\t121.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Subquestions 2 and 3.\n",
     "\n",
-    "# YOUR CODE HERE\n"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "print(x)\n",
+    "print(y)\n",
+    "print(F(y))\n",
+    "print(JacobianF(y))"
    ]
   },
   {
