Fix part c Jacobian
exp() term was wrongly divided by h^2

--- a/hw4_2023.ipynb
+++ b/hw4_2023.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 92,
    "id": "dcbf2b55-d129-4cbe-a517-416c2682d8d5",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,7 @@
     "    # Divide all elements by constant h^2\n",
     "    M /= h**2\n",
     "    \n",
-    "    return M\n"
+    "    return M"
    ]
   },
   {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 96,
    "id": "dea2b67c-4c28-42f3-9555-fdc2795741ab",
    "metadata": {},
    "outputs": [
@@ -318,13 +318,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x [0. 1. 2. 3. 4. 5. 6. 7. 8. 9.]\n",
-      "y [ 0.  0.  2.  6. 12. 20. 30. 42. 56. 72.]\n",
+      "x [0.001      0.11188889 0.22277778 0.33366667 0.44455556 0.55544444\n",
+      " 0.66633333 0.77722222 0.88811111 0.999     ]\n",
+      "y [-0.000999   -0.09936977 -0.17314784 -0.22233322 -0.24692591 -0.24692591\n",
+      " -0.22233322 -0.17314784 -0.09936977 -0.000999  ]\n",
       "y'' [2. 2. 2. 2. 2. 2. 2. 2. 2. 2.]\n",
-      "M*y [     0.    242.    242.    242.    242.    242.    242.    242.    242.\n",
-      " -10648.]\n",
-      "error [ 2.000e+00 -2.400e+02 -2.400e+02 -2.400e+02 -2.400e+02 -2.400e+02\n",
-      " -2.400e+02 -2.400e+02 -2.400e+02  1.065e+04]\n"
+      "M*y [-11.78198362   2.97571565   2.97571565   2.97571565   2.97571565\n",
+      "   2.97571565   2.97571565   2.97571565   2.97571565 -11.78198362]\n",
+      "error [13.78198362 -0.97571565 -0.97571565 -0.97571565 -0.97571565 -0.97571565\n",
+      " -0.97571565 -0.97571565 -0.97571565 13.78198362]\n"
      ]
     }
    ],
@@ -341,7 +343,7 @@
     "\n",
     "# Define constant and input values\n",
     "n = 10\n",
-    "x = np.linspace(0,9,n)\n",
+    "x = np.linspace(0.001,0.999,n)\n",
     "\n",
     "# Create vector y of quadratic equation\n",
     "y = f(x)\n",
@@ -364,7 +366,7 @@
     "print('y',y)\n",
     "print(\"y''\",y_second_deriv)\n",
     "print(\"M*y\",y_second_deriv_approx)\n",
-    "print('error',error)"
+    "print('error',error)\n"
    ]
   },
   {
@@ -386,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 97,
    "id": "f693cfc3-9639-419a-b8f8-5179c3e60123",
    "metadata": {},
    "outputs": [],
@@ -408,16 +410,16 @@
     "\n",
     "    # Define the diagonal elements ignoring the h^2 constant:\n",
     "    # -2 + e^y_i to the main diagonal and 1 for the diagonals around it\n",
-    "    main_diagonal = -2*np.ones(n) + np.exp(y)\n",
-    "    top_diagonal = np.ones(n-1) \n",
-    "    under_diagonal = np.ones(n-1) \n",
+    "    main_diagonal = -2*np.ones(n) / h**2 + np.exp(y)\n",
+    "    top_diagonal = np.ones(n-1) / h**2\n",
+    "    under_diagonal = np.ones(n-1) / h**2\n",
     "    \n",
     "    # Create the sparse matrix with the diagonals defined\n",
     "    diagonals = [main_diagonal, top_diagonal, under_diagonal]\n",
     "    J = diags(diagonals, [0, 1, -1]) \n",
     "\n",
     "    # Divide all elements by constant h^2\n",
-    "    J /= h**2\n",
+    "    #J /= \n",
     "    \n",
     "    return J"
    ]
@@ -440,7 +442,17 @@
    "source": [
     "Subquestion 1.\n",
     "\n",
-    "YOUR ANSWER HERE"
+    "Generally, Taylor expansion is the following sum:\n",
+    "\n",
+    "XXX\n",
+    "\n",
+    "First order taylor expansion is then:\n",
+    "\n",
+    "XXXX\n",
+    "\n",
+    "In our case, $f(a) = F(y+s) = M * ETC...$\n",
+    "\n",
+    "Therefore, $T_F$ is..."
    ]
   },
   {
@@ -491,7 +503,8 @@
    ],
    "source": [
     "# Subquestions 2 and 3.\n",
-    "\n",
+    "## \n",
+    "## COMPUTE F(y+s) and TF(y+s) for certain y and s\n",
     "# YOUR CODE HERE\n",
     "\n",
     "print(x)\n",
