Part d almost done

--- a/hw4_2023.ipynb
+++ b/hw4_2023.ipynb
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 111,
    "id": "f693cfc3-9639-419a-b8f8-5179c3e60123",
    "metadata": {},
    "outputs": [],
@@ -406,6 +406,7 @@
     "    which is just M with main diagonal multiplyed by corresponding e^y \"\"\"\n",
     "\n",
     "    # Compute constant h\n",
+    "    n = y.size\n",
     "    h = 1 / (n + 1)\n",
     "\n",
     "    # Define the diagonal elements ignoring the h^2 constant:\n",
@@ -440,24 +441,42 @@
    "id": "48d3fd40-cff8-40b6-8e6e-5aa2a48fd4e0",
    "metadata": {},
    "source": [
-    "Subquestion 1.\n",
+    "#### Subquestion d.1\n",
+    "Recall that the Taylor expansion of a function around a certain point is given by\n",
     "\n",
-    "Generally, Taylor expansion is the following sum:\n",
+    "$T_f(x,a) = \\sum_{n=0}^{\\infty} \\frac{f^{(n)}(a)}{n!}(x-a)^n$\n",
     "\n",
-    "XXX\n",
+    "Where $f$ is our function, $a$ the point of interest, $n!$ the factorial of $n$ and $f^{(n)}(a)$ the nth derivative of f evaluated at that point. \n",
     "\n",
-    "First order taylor expansion is then:\n",
+    "Its first order taylor expansion is given by:\n",
     "\n",
-    "XXXX\n",
+    "$T_{f,1}(a) = f(a) + f'(a)(x-a)$\n",
     "\n",
-    "In our case, $f(a) = F(y+s) = M * ETC...$\n",
+    "In our case\n",
     "\n",
-    "Therefore, $T_F$ is..."
+    "$f(a) = F(\\vec y) = {\\bf M} \\cdot (\\vec y ) + E(\\vec y)$.\n",
+    "\n",
+    "$f'(a) = F'(\\vec y) = {\\bf M} + E(\\vec y)$\n",
+    "\n",
+    "$(x-a) = (\\vec y - \\vec s)$\n",
+    "\n",
+    "\n",
+    "Therefore\n",
+    "\n",
+    "$T_{F,1}(\\vec{y},\\vec{s}) = F(\\vec{s}) + F'(\\vec{s})(\\vec y - \\vec s)$\n",
+    "\n",
+    "Which can be simplified to\n",
+    "\n",
+    "$T_{F,1} = E(\\vec s)(\\vec 1 + \\vec y - \\vec s) + M \\cdot \\vec y$\n",
+    "\n",
+    "Because\n",
+    "\n",
+    "$\\blacksquare$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 136,
    "id": "bb9cb01a-1fca-400f-b860-c4efaceada23",
    "metadata": {},
    "outputs": [
@@ -465,52 +484,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0. 1. 2. 3. 4. 5. 6. 7. 8. 9.]\n",
-      "[ 0.  0.  2.  6. 12. 20. 30. 42. 56. 72.]\n",
-      "[1.00000000e+00 2.43000000e+02 2.49389056e+02 6.45428793e+02\n",
-      " 1.62996791e+05 4.85165437e+08 1.06864746e+13 1.73927494e+18\n",
-      " 2.09165950e+24 1.85867175e+31]\n",
-      "  (0, 0)\t-121.0\n",
-      "  (1, 1)\t-121.0\n",
-      "  (2, 2)\t652.0757879706086\n",
-      "  (3, 3)\t48572.88401262095\n",
-      "  (4, 4)\t19693087.761699475\n",
-      "  (5, 5)\t58704988402.584625\n",
-      "  (6, 6)\t1293063424364218.0\n",
-      "  (7, 7)\t2.104522679239806e+20\n",
-      "  (8, 8)\t2.5309079901757253e+26\n",
-      "  (9, 9)\t2.2489928117937946e+33\n",
-      "  (0, 1)\t121.0\n",
-      "  (1, 2)\t121.0\n",
-      "  (2, 3)\t121.0\n",
-      "  (3, 4)\t121.0\n",
-      "  (4, 5)\t121.0\n",
-      "  (5, 6)\t121.0\n",
-      "  (6, 7)\t121.0\n",
-      "  (7, 8)\t121.0\n",
-      "  (8, 9)\t121.0\n",
-      "  (1, 0)\t121.0\n",
-      "  (2, 1)\t121.0\n",
-      "  (3, 2)\t121.0\n",
-      "  (4, 3)\t121.0\n",
-      "  (5, 4)\t121.0\n",
-      "  (6, 5)\t121.0\n",
-      "  (7, 6)\t121.0\n",
-      "  (8, 7)\t121.0\n",
-      "  (9, 8)\t121.0\n"
+      "[  3.62140276   1.73325302 -17.54039689]\n",
+      "[ 5.77712221  2.88236587 -9.55899283]\n",
+      "[[-31.          16.           0.        ]\n",
+      " [ 16.         -30.71597458  16.        ]\n",
+      " [  0.          16.         -30.35127873]]\n",
+      "[  20.25         15.33831732   59.53020566  128.83412295 1388.06847083]\n",
+      "[ 20.25        59.48047    238.52008112 538.18192982  71.91743501]\n",
+      "[ 20.25        78.82845492 315.94735088 712.44032621 172.43246296]\n",
+      "[ 20.25        80.91339289 324.29211373 731.22364396 184.87784842]\n",
+      "[ 20.25        81.12338881 325.13261596 733.11556859 186.14637558]\n",
+      "[ 20.25        81.14440343 325.21672644 733.304897   186.27346823]\n",
+      "[ 20.25        81.14650504 325.2251381  733.3238312  186.28617989]\n",
+      "[ 20.25        81.1467152  325.22597927 733.32572463 186.28745108]\n",
+      "[ 20.25        81.14673622 325.22606338 733.32591398 186.2875782 ]\n",
+      "[ 20.25        81.14673832 325.2260718  733.32593291 186.28759091]\n"
      ]
     }
    ],
    "source": [
     "# Subquestions 2 and 3.\n",
-    "## \n",
-    "## COMPUTE F(y+s) and TF(y+s) for certain y and s\n",
-    "# YOUR CODE HERE\n",
     "\n",
-    "print(x)\n",
-    "print(y)\n",
-    "print(F(y))\n",
-    "print(JacobianF(y))"
+    "## COMPUTE F(y+s) and TF(y+s) for certain y and s\n",
+    "def T(y,s):\n",
+    "    # Method 1 - using main diag of M as derivative of M * y\n",
+    "    Ms = SecondDerMatrix(s.size) @ s\n",
+    "    Es = np.exp(s)\n",
+    "    Md = SecondDerMatrix(s.size).diagonal() # Main diagonal of M\n",
+    "    return Ms + Es + (Md + Es)*(y-s)\n",
+    "    \n",
+    "    # Method 2 - Dimensions just match!\n",
+    "    #E_s = np.exp(s)\n",
+    "    #vector = (np.ones(y.size) + y - s)\n",
+    "    #return ( E_s @ vector ) + SecondDerMatrix(s.size) @ y\n",
+    "\n",
+    "# Get some values\n",
+    "n = 3\n",
+    "y = np.linspace(0,0.5,n)\n",
+    "s = np.linspace(0.2,0.4,n)\n",
+    "\n",
+    "F_ys = F(y+s)\n",
+    "T_ys = T(y,s)\n",
+    "\n",
+    "print(F_ys)\n",
+    "print(T_ys)\n",
+    "print(JacobianF(y).toarray())\n",
+    "\n",
+    "\n",
+    "# Subquestion 3\n",
+    "# Verify for many k -> h = 10^-k and s / norm(s)= h\n",
+    "# that \n",
+    "n = 5\n",
+    "k_values = 10\n",
+    "y = np.linspace(0,0.5,n)\n",
+    "\n",
+    "for k in range(k_values):\n",
+    "    h = 10 ** -k\n",
+    "    s = np.linspace(0,1,n)\n",
+    "    # Scale so s has norm O(h)\n",
+    "    # I ASSUME that O(h) is same as just h\n",
+    "    s = s * (h / np.linalg.norm(s))\n",
+    "    \n",
+    "    # Compute \n",
+    "    F_ys = F(y+s)\n",
+    "    T_ys = T(y,s)\n",
+    "\n",
+    "    # Error\n",
+    "    # TODO: Fix formula so it returns scalar\n",
+    "    error = (F_ys - T_ys) ** 2\n",
+    "\n",
+    "    # TODO: Plot and analysis\n",
+    "    print(error)\n"
    ]
   },
   {
