Added buggy code for part 2
Almost done, it's about a small syntax confusion

--- a/hw5_2023.ipynb
+++ b/hw5_2023.ipynb
@@ -32567,7 +32567,101 @@
    "id": "fd180378-9e14-4e45-ac0d-4dedd620303f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define measurement x0 and initial guess of h\n",
+    "# 1. I make a innitial measurement of x by adding noise to the famous 3,4,5 triangle\n",
+    "x0 = np.array([np.pi/6,np.pi/3,np.pi/2,3,4,5]) + np.random.normal(0, 1, 6) \n",
+    "\n",
+    "# 2. I make an innitial guess of h using random gaussian samples\n",
+    "h = np.random.normal(0, 1, 6) \n",
+    "\n",
+    "# Define error measure, knowing that h = x - x0\n",
+    "function = lambda x,x0: np.linalg.norm(x - x0)**2\n",
+    "\n",
+    "# Define constrains\n",
+    "# 1. For the angle sum, we can set up a linear system such that Ax = pi\n",
+    "# where A is just the vector that retains the angles from x. Finally,\n",
+    "# we need to write the lower and upper bound of our constraint, which is pi \n",
+    "angle_sum_A = [1, 1, 1, 0, 0, 0]\n",
+    "angle_sum_b = np.pi\n",
+    "\n",
+    "# 2. For the sine theorem, we must also define two linear systems based on x,\n",
+    "# each with half of the theorem. Again, the lower and upper bound must be the same\n",
+    "sine_theorem_A1 = [0, 0, 0, np.sin(x[1]), -np.sin(x[0]), 0]\n",
+    "sine_theorem_A2 = [0, 0, 0, 0, np.sin(x[2]), -np.sin(x[1])]\n",
+    "sine_theorem_b1 = 0\n",
+    "sine_theorem_b2 = 0\n",
+    "\n",
+    "# 3. We now need to create a dictionary with the previous constrains\n",
+    "# https://stackoverflow.com/questions/52001922/linearconstraint-in-scipy-optimize\n",
+    "A = np.array([angle_sum_A,sine_theorem_A1,sine_theorem_A2])\n",
+    "b = np.array([angle_sum_b, sine_theorem_b1, sine_theorem_b2])\n",
+    "constraints = [{\"type\": \"ineq\", \"fun\": lambda x: A @ x - b}]\n",
+    "\n",
+    "# Initial guess\n",
+    "#x0 = [np.pi/6,np.pi/3,np.pi/2,3,4,5]\n",
+    "#x0 = [np.pi/6,np.pi/3,np.pi/2,1,4,5]\n",
+    "\n",
+    "\n",
+    "# EXTRA: Define bounds for the triangle: angles up to 90º and non negative lenghts\n",
+    "bounds = ((0, np.pi/2), (0, np.pi/2), (0, np.pi/2), (0,None), (0,None), (0,None))\n",
+    "\n",
+    "# Solve\n",
+    "φ = sp.optimize.minimize(function, h, args=(x0,), method='SLSQP', bounds=bounds,constraints=constraints)\n",
+    "\n",
+    "# Add h to initial guess to get final triangle\n",
+    "x = x0 + φ.x\n",
+    "\n",
+    "# Check if results satisfies cosine theorem\n",
+    "cosine_theorem_verification = lambda x: bool(x[5]**2 == x[3]**2 + x[4]**2 - 2*x[3]*x[4]*np.cos(x[2]))\n",
+    "#print(φ.x[5]**2 ,φ.x[3]**2 + φ.x[4]**2 - 2*φ.x[3]*φ.x[4]*np.cos(φ.x[2]))\n",
+    "\n",
+    "# Print result\n",
+    "print('Measurement (x):',x0)\n",
+    "print('Initial guess (h):',h)\n",
+    "print('Optimized triangle:',φ.x)\n",
+    "print('Verifies cosine theorem:',cosine_theorem_verification(φ.x))\n",
+    "print(φ.x[5]**2 ,'==',φ.x[3]**2 + φ.x[4]**2 - 2*φ.x[3]*φ.x[4]*np.cos(φ.x[2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define functions\n",
+    "def angle_sum_verification(x):\n",
+    "    α,β,γ = x[0],x[1],x[2]\n",
+    "    return bool( (α + β + γ) == np.pi)\n",
+    "\n",
+    "def sine_theorem_verification(x):\n",
+    "    α,β,γ,a,b,c = x[0],x[1],x[2],x[3],x[4],x[5]\n",
+    "    print(a*np.sin(β),b*np.sin(α))\n",
+    "    print((( b*np.sin(γ) - c*np.sin(β) ) == 0))\n",
+    "    return bool( (a*np.sin(β) - b*np.sin(α)) == 0 ) and bool( ( b*np.sin(γ) - c*np.sin(β) ) == 0 )\n",
+    "    \n",
+    "def cosine_theorem_verification(x):\n",
+    "    \"\"\" Verifies whether vector x satistifies cosine theorem\n",
+    "    returns True if c^2 = a^2 + b^2 - 2*a*b*cos(gamma)\"\"\"\n",
+    "    a,b,c,γ = x[3],x[4],x[5],x[2]\n",
+    "    return bool( c**2 == (a**2 + b**2 - 2*a*b*np.cos(γ)) )\n",
+    "\n",
+    "\n",
+    "# Unit test them!\n",
+    "x = [np.pi/6,np.pi/3,np.pi/2,3,4,5] # Classic 3,4,5 triangle\n",
+    "#x = [np.pi/2,np.pi/3,np.pi/2,1,20,2] # Not a triangle\n",
+    "\n",
+    "# TODO: Sum angle verification unit test\n",
+    "# TODO: Sine theorem verification unit test\n",
+    "# TODO: Verify for the optimized vectors\n",
+    "\n",
+    "# Prints...\n",
+    "print('Vector',x)\n",
+    "print('Satisfies angle sum:',angle_sum_verification(x))\n",
+    "print('Satisfies sine theorem:',sine_theorem_verification(x))\n",
+    "print('Satisfies cosine theorem:',cosine_theorem_verification(x))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32578,6 +32672,30 @@
     "You will notice that the corrections will be made mainly to the angles and much less to the lengths of the sides of the triangle. This is because the measurements have not the same absolute errors. While the error in last digit of the sides is about 1, the errors in radians of the angles are about 0.01. Repeat your computation by taking in account with appropriate weighting the difference in measurement errors. Minimize not simply $\\| h \\|_2^2$ but\n",
     "$$\n",
     "  \\left\\| \\begin{bmatrix} 100 h_1 \\\\ 100 h_2 \\\\ 100 h_3 \\\\ h_4 \\\\ h_5 \\\\ h_6 \\end{bmatrix} \\right\\|_2^2.$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update function\n",
+    "function = lambda x,h: np.sqrt( 100*(x[0]-h[0])**2\n",
+    "                         +100*(x[1]-h[1])**2\n",
+    "                         +100*(x[2]-h[2])**2\n",
+    "                         +(x[3]-h[3])**2\n",
+    "                         +(x[4]-h[4])**2\n",
+    "                         +(x[5]-h[5])**2)\n",
+    "\n",
+    "function = lambda x,x0: np.sqrt( 100*(x[0]-x0[0])**2\n",
+    "                         +100*(x[1]-x0[1])**2\n",
+    "                         +100*(x[2]-x0[2])**2\n",
+    "                         +(x[3]-x0[3])**2\n",
+    "                         +(x[4]-x0[4])**2\n",
+    "                         +(x[5]-x0[5])**2)**2\n",
+    "# Run again\n",
+    "# TODO"
    ]
   }
  ],
