Exercise 2 with text
Fixed some minor error in the text, improved clarity

--- a/hw5_2023_ex2.ipynb
+++ b/hw5_2023_ex2.ipynb
@@ -32565,7 +32565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 189,
    "id": "fd180378-9e14-4e45-ac0d-4dedd620303f",
    "metadata": {},
    "outputs": [
@@ -32575,11 +32575,10 @@
      "text": [
       "x: [  1.17809725   0.90757121   1.04719755 172.         146.\n",
       " 165.        ]\n",
-      "h: [-0.01169257 -0.01231162  0.03273084  0.00019831  0.00013057 -0.00033285]\n",
-      "x_hat [  1.16640467   0.89525959   1.07992839 172.00019831 146.00013057\n",
-      " 164.99966715]\n",
+      "h: [-0.01169222 -0.0123118   0.03273067  0.00022237  0.0001075  -0.00035013]\n",
+      "x_hat [  1.16640503   0.89525941   1.07992822 172.00022237 146.0001075\n",
+      " 164.99964987]\n",
       "\n",
-      "Iterations required: 4\n",
       "Angle sum verification: True\n",
       "Sine theorem verification: True\n",
       "Cosine theorem verification: True\n"
@@ -32620,7 +32619,6 @@
     "print('h:',h)\n",
     "print('x_hat',x_hat)\n",
     "print()\n",
-    "print('Iterations required:',optimization.nit)\n",
     "print('Angle sum verification:',angle_sum_verification(x_hat))\n",
     "print('Sine theorem verification:',sine_theorem_verification(x_hat))\n",
     "print('Cosine theorem verification:',cosine_theorem_verification(x_hat))\n"
@@ -32630,7 +32628,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above result shows that the resulting $h$ is valid, as the resulting $\\tilde{x}$ value not only satisfies the angle sum and sine theorem, but also the cosine theorem (and thus $\\tilde{x}$ can be safely determined to correspond to a triangle). This showcases the usefulness of constrains to enhance minimization problems. On the other side, the $h$ values, while valid, are noticeably small for the sides of the triangle, with most transformation taking place instead on $\\alpha$, $\\beta$ and $\\gamma$. This is an expected result because (1) for our particular measurements the contribution of the lengths makes up most of the value of the function, thus overshadowing the angle contributions during minimization under our constraints and (2) a change in the angles alone is sufficient to make the measurements comply with both triangle constraints. This in turn highlights that the angle sum and sine theorem constraints are enough to ensure that the minimization algorithm produces a triangle despite the minimization process barely allowing the update of its lengths because of our choice of function."
+    "The above result shows that the resulting $h$ is valid, as the resulting $\\tilde{x}$ value not only satisfies the angle sum and sine theorem, but also the cosine theorem (and thus $\\tilde{x}$ can be safely determined to correspond to a triangle). This showcases the usefulness of constrains to enhance minimization problems. On the other side, the $h$ values, while valid, are noticeably small for the sides of the triangle, with most transformation taking place instead on $\\alpha$, $\\beta$ and $\\gamma$. This is an expected result because (1) for our particular measurements the contribution of the lengths makes up most of the value of the function, thus overshadowing the angle contributions during minimization under our constraints and (2) even a change in the angles alone would be sufficient to make the measurements comply with both triangle constraints. This in turn highlights that the angle sum and sine theorem constraints are enough to ensure that the minimization algorithm produces a triangle despite the minimization process barely allowing the update of its lengths because of our choice of function."
    ]
   },
   {
@@ -32646,7 +32644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -32655,11 +32653,10 @@
      "text": [
       "x: [  1.17809725   0.90757121   1.04719755 172.         146.\n",
       " 165.        ]\n",
-      "h: [-0.01680777 -0.01438162  0.03991604 -0.69155878 -0.50815389  0.32704798]\n",
-      "x_hat [  1.16128947   0.89318959   1.08711359 171.30844122 145.49184611\n",
-      " 165.32704798]\n",
+      "h: [-0.01544029 -0.01027465  0.03444159 -0.62672874 -0.05978751 -0.18614841]\n",
+      "x_hat [  1.16265695   0.89729656   1.08163914 171.37327126 145.94021249\n",
+      " 164.81385159]\n",
       "\n",
-      "Iterations required: 5\n",
       "Angle sum verification: True\n",
       "Sine theorem verification: True\n",
       "Cosine theorem verification: True\n"
@@ -32680,7 +32677,6 @@
     "print('h:',h)\n",
     "print('x_hat',x_hat)\n",
     "print()\n",
-    "print('Iterations required:',optimization.nit)\n",
     "print('Angle sum verification:',angle_sum_verification(x_hat))\n",
     "print('Sine theorem verification:',sine_theorem_verification(x_hat))\n",
     "print('Cosine theorem verification:',cosine_theorem_verification(x_hat))"
@@ -32690,7 +32686,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once again, the resulting $h$ is valid as the new $\\tilde{x}$ satisfies all the triangle properties, including the cosine theorem. However, the correction values of $h$ now not only update the angles of the triangle significantly but also its sides. This is a direct result of the weighting introduced to the function we are minimizing, as it now allows all parameters of the system to have a roughly evenly impact on its output. More importantly, the number of iterations required to converge to the solution after this change was introduced was significantly lowered. This result in turn highlights the importance of considering the ranges of the values of our system when defining the function to minimize and how this can in turn enhance the speed of the minimization convergence. "
+    "Once again, the resulting $h$ is valid as the new $\\tilde{x}$ satisfies all the triangle properties, including the cosine theorem. However, the correction values of $h$ now not only update the angles of the triangle significantly but also its sides. This is a direct result of the weighting introduced to the function we are minimizing, as it now allows all parameters of the system to have a roughly evenly impact on its output. This is the resulting triangle:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "α 66.61533644106662 [º]\n",
+      "β 51.411305845146444 [º]\n",
+      "γ 61.97335771378693 [º]\n",
+      "\n",
+      "a 171.37327125710914 [m]\n",
+      "b 145.94021248564377 [m]\n",
+      "c 164.813851587431 [m]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('α',(180/np.pi)*x_hat[0],'[º]')\n",
+    "print('β',(180/np.pi)*x_hat[1],'[º]')\n",
+    "print('γ',(180/np.pi)*x_hat[2],'[º]')\n",
+    "print()\n",
+    "print('a',x_hat[3],'[m]')\n",
+    "print('b',x_hat[4],'[m]')\n",
+    "print('c',x_hat[5],'[m]')\n"
    ]
   }
  ],
