1a implemented in function

--- a/hw6_2023.ipynb
+++ b/hw6_2023.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,23 +296,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 26,
    "id": "8f66a8b2-02e4-4ab0-9801-709b3d6d085f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def AdaptiveQuadrature(func,a,b,I):\n",
+    "def AdaptiveQuadrature(func,a,b,I, epsilon):\n",
     "    \"From heath p.357\"\n",
     "    function_evals_adapt_quad += 1  # Initialize the function evaluations counter.\n",
     "\n",
     "    \n",
     "    # Calculate an initial estimate using a method T (presumably a trapezoidal rule).\n",
-    "    I_1 = T(func, a, b, m) \n",
+    "    I_1 = T(func, a, b, 1) \n",
     "    # Increment function evaluation count.\n",
     "    function_evals_adapt_quad += 1 \n",
     "     \n",
     "    # Calculate another estimate, possibly using a midpoint rule.\n",
-    "    I_2 = T_midpoint(func, a, b)\n",
+    "    I_2 = T_midpoint(func, a, b, 2)\n",
     "     # Increment function evaluation count.\n",
     "    function_evals_adapt_quad += 1 \n",
     "\n",
@@ -327,22 +327,27 @@
     "        # Return the current estimate if convergence criteria are met.\n",
     "        return I_2\n",
     "\n",
-    "    # Estimate integral by summing function values at 3 random points.\n",
-    "    I_est = np.sum(func(np.random.uniform(a, b, 3)))\n",
     "\n",
-    "     # Check if the difference between estimates is negligible.\n",
-    "    if (I_est + (I_2 - I_1) == I_est):\n",
+    "    # Compute E2, Take 0.5 for the value of C for now, but put in real value for C once found in derivation of 1b.\n",
+    "    C = 0.5 \n",
+    "    E_2 = C*(I_2 - I_1)\n",
+    "    if (E_2 <= epsilon):\n",
     "        function_evals_adapt_quad += 1\n",
-    "        # Return the current estimate if the difference is negligible.\n",
-    "        return I_2 \n",
+    "        # Return the current Integral estimate + the error, if the difference is negligible.\n",
+    "        return I_2 , E_2\n",
     "\n",
     "    # If the difference is significant, recursively apply the method to smaller intervals.\n",
     "    else:\n",
     "        function_evals_adapt_quad += 1\n",
-    "        return (AdaptiveQuadrature(func, a, m, I) + AdaptiveQuadrature(func, m, b, I))\n",
-    "\n",
-    "\n"
+    "        return (AdaptiveQuadrature(func, a, m, I, epsilon/2) + AdaptiveQuadrature(func, m, b, I, epsilon/2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -365,11 +370,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def AdaptiveQuadratureNoDupes(func, a, b, I):\n",
+    "def AdaptiveQuadratureNoDupes(func, a, b, I, epsilon):\n",
     "    \"\"\"Reference to Heath p.357\"\"\"\n",
     "    function_evals_adaptive_quad_no_dupes += 1\n",
     "\n",
@@ -380,25 +385,25 @@
     "    prev_evals_I_2 = []\n",
     "\n",
     "    # Check if the function call T(func, a, b) has been made previously\n",
-    "    if f'T({func},{a},{b})' in prev_calls_I_1:\n",
-    "        I_1_index = prev_calls_I_1.index(f'T({func},{a},{b})')\n",
+    "    if f'T({func},{a},{b}, {m})' in prev_calls_I_1:\n",
+    "        I_1_index = prev_calls_I_1.index(f'T({func},{a},{b}, {m})')\n",
     "        I_1 = prev_evals_I_1[I_1_index]\n",
     "    else:\n",
     "        # Compute I_1 and update the counter if not a duplicate\n",
     "        I_1 = T(func, a, b)\n",
     "        function_evals_adaptive_quad_no_dupes += 1\n",
-    "        prev_calls_I_1.append(f'T({func},{a},{b})')\n",
+    "        prev_calls_I_1.append(f'T({func},{a},{b}, {m})')\n",
     "        prev_evals_I_1.append(I_1)\n",
     "\n",
     "    # Similar check for T_midpoint(func, a, b)\n",
-    "    if f'T_midpoint({func},{a},{b})' in prev_calls_I_2:\n",
-    "        I_2_index = prev_calls_I_2.index(f'T_midpoint({func},{a},{b})')\n",
+    "    if f'T_midpoint({func},{a},{b}, {m})' in prev_calls_I_2:\n",
+    "        I_2_index = prev_calls_I_2.index(f'T_midpoint({func},{a},{b}, {m})')\n",
     "        I_2 = prev_evals_I_2[I_2_index]\n",
     "    else:\n",
     "        # Compute I_2 and update the counter if not a duplicate\n",
     "        I_2 = T_midpoint(func, a, b)\n",
     "        function_evals_adaptive_quad_no_dupes += 1\n",
-    "        prev_calls_I_2.append(f'T_midpoint({func},{a},{b})')\n",
+    "        prev_calls_I_2.append(f'T_midpoint({func},{a},{b}, {m})')\n",
     "        prev_evals_I_2.append(I_2)\n",
     "    \n",
     "    # Calculate the midpoint of the interval\n",
@@ -409,17 +414,18 @@
     "        print('Warning: Convergence tolerance met, returning last result')\n",
     "        return I_2\n",
     "    \n",
-    "    # Estimate the integral using random sampling\n",
-    "    I_est = np.sum(func(np.random.uniform(a, b, 3)))\n",
-    "    function_evals_adaptive_quad_no_dupes += 3 \n",
+    "    # Compute E2, Take 0.5 for the value of C for now, but put in real value for C once found in derivation of 1b.\n",
+    "    C = 0.5 \n",
+    "    E_2 = C*(I_2 - I_1)\n",
+    "    if (E_2 <= epsilon):\n",
+    "        function_evals_adapt_quad += 1\n",
+    "        # Return the current Integral estimate + the error, if the difference is negligible.\n",
+    "        return I_2 , E_2\n",
     "\n",
-    "    # Check the accuracy of the integral estimation\n",
-    "    if (I_est + (I_2 - I_1) == I_est):\n",
-    "        return I_2\n",
+    "    # If the difference is significant, recursively apply the method to smaller intervals.\n",
     "    else:\n",
-    "        # Recursive call for further refinement if the condition is not met\n",
-    "        return (AdaptiveQuadratureNoDupes(func, a, m, I) + \n",
-    "                AdaptiveQuadratureNoDupes(func, m, b, I))"
+    "        function_evals_adapt_quad += 1\n",
+    "        return (AdaptiveQuadrature(func, a, m, I, epsilon/2) + AdaptiveQuadrature(func, m, b, I, epsilon/2))"
    ]
   },
   {
